--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,7 @@
       "ios": {}
     },
     "production": {
+      "distribution": "internal",
       "android": {
         "buildType": "apk"
       },
